# pipo-api

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: main.py
src/api/config/: cors_config.py  security.py  swagger_config.py
src/api/controllers/: country_controller.py  invitation_controller.py  pdf_controller.py  user_controller.py
src/application/interfaces/: imongo_repo.py  ipdf_service.py  iunit_of_work.py
src/core/: config.py  exceptions.py
src/domain/collections/: gbank_account.py  gconsignee.py  gcountry.py  gexporter.py  ginvitation.py  gmanufacturer.py  gorder.py  gpassword_reset.py  gproforma_number.py  gsupplier.py  guser.py
src/domain/dtos/: login_dto.py  login_response_dto.py  order_request_dto.py  pdf_report_dto.py  register_dto.py  user_dto.py
src/domain/models/: order.py  order_slab.py
src/domain/utils/: py_object_id.py
src/infrastructure/di/: service_container.py
src/infrastructure/persistence/: mongo_repo.py  order_document.py  unit_of_work.py
src/infrastructure/services/: pdf_service.py
src/infrastructure/services/pdf/: pdf_service_impl.py
src/infrastructure/services/pdf/common/: footer.py
src/infrastructure/services/pdf/proforma_type_a/: pdf_service_a.py
src/infrastructure/services/pdf/proforma_type_a/components/: content_a.py  header_a.py
src/infrastructure/services/pdf/proforma_type_cs/: pdf_service_cs.py
src/infrastructure/services/pdf/proforma_type_cs/components/: content_cs.py  header_cs.py
src/infrastructure/services/pdf/utils/: image_fetcher.py  number_to_words.py
