[project]
name = "pipo-api"
version = "0.1.0"
description = "API de Países usando FastAPI y Clean Architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi-cloud-cli>=0.12.0",
    "fastapi[standard]",
    "motor",
    "pydantic",
    "python-dotenv",
    "rich-toolkit>=0.20.1",
]

[tool.uv]
managed = true
[tool.fastapi]
entrypoint = "main:app"