[project]
name = "pipo-api"
version = "0.1.0"
description = "API de Países usando FastAPI y Clean Architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi-cloud-cli>=0.12.0",
    "fastapi[standard]",
    "fpdf2>=2.8.4",
    "motor",
    "pillow>=11.3.0",
    "pydantic",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.13.0",
    "python-dotenv",
    "reportlab>=5.0.0",
    "rich-toolkit>=0.20.1",
]

[tool.uv]
managed = true
[tool.fastapi]
entrypoint = "main:app"
